--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "48bit-timestamp",
   "version": "1.0.0",
-  "description": "",
+  "author": "Ivan Lytovka",
+  "description": "48-bit timestamp encoding utility",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test"
   },
   "private": true
 }
